keycloak, mailpit added auth/me endpoint openapi: removed auth/register(login,reset,logout,email,password) endpoints
