# api/openapi.yaml
@@ -17,87 +17,87 @@ paths:
   # ==========================================
   # 1. АВТОРИЗАЦИЯ И ИДЕНТИФИКАЦИЯ (AUTH)
   # ==========================================
-  /auth/register:
-    post:
-      summary: Регистрация нового пользователя
-      description: Регистрация соискателя или работодателя по email и паролю.
-      tags:
-        - Auth
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/RegisterRequest'
-      responses:
-        '201':
-          description: Пользователь успешно зарегистрирован
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/AuthResponse'
-        '400':
-          $ref: '#/components/responses/400BadRequest'
-        '409':
-          description: Пользователь с таким email уже существует
+  # /auth/register:
+  #   post:
+  #     summary: Регистрация нового пользователя
+  #     description: Регистрация соискателя или работодателя по email и паролю.
+  #     tags:
+  #       - Auth
+  #     requestBody:
+  #       required: true
+  #       content:
+  #         application/json:
+  #           schema:
+  #             $ref: '#/components/schemas/RegisterRequest'
+  #     responses:
+  #       '201':
+  #         description: Пользователь успешно зарегистрирован
+  #         content:
+  #           application/json:
+  #             schema:
+  #               $ref: '#/components/schemas/AuthResponse'
+  #       '400':
+  #         $ref: '#/components/responses/400BadRequest'
+  #       '409':
+  #         description: Пользователь с таким email уже существует
 
-  /auth/login:
-    post:
-      summary: Вход в систему
-      description: Аутентификация по email и паролю с выдачей JWT токенов.
-      tags:
-        - Auth
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/LoginRequest'
-      responses:
-        '200':
-          description: Успешная аутентификация
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/AuthResponse'
-        '401':
-          description: Неверный email или пароль
+  # /auth/login:
+  #   post:
+  #     summary: Вход в систему
+  #     description: Аутентификация по email и паролю с выдачей JWT токенов.
+  #     tags:
+  #       - Auth
+  #     requestBody:
+  #       required: true
+  #       content:
+  #         application/json:
+  #           schema:
+  #             $ref: '#/components/schemas/LoginRequest'
+  #     responses:
+  #       '200':
+  #         description: Успешная аутентификация
+  #         content:
+  #           application/json:
+  #             schema:
+  #               $ref: '#/components/schemas/AuthResponse'
+  #       '401':
+  #         description: Неверный email или пароль
 
-  /auth/reset:
-    post:
-      summary: Запрос на сброс пароля
-      description: Сброс пароля
-      tags:
-        - Auth
-      requestBody:
-        required: true 
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/ResetRequest'
-      responses:
-        '204':
-          description: Письмо на почту отправлено
-        '400':
-          $ref: '#/components/responses/400BadRequest'
-    patch:
-      summary: Сброс пароля с помощью ссылки
-      description: Сброс пароля и восстановление доступа к аккаунту
-      tags:
-        - Auth  
-      requestBody:
-        required: true 
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/ResetForm' 
-      responses:
-        '204':
-          description: Аккаунт восстановлен
-        '400':
-          $ref: '#/components/responses/400BadRequest'
-        '422':
-          description: Пароль не отличается от прошлого
+  # /auth/reset:
+  #   post:
+  #     summary: Запрос на сброс пароля
+  #     description: Сброс пароля
+  #     tags:
+  #       - Auth
+  #     requestBody:
+  #       required: true 
+  #       content:
+  #         application/json:
+  #           schema:
+  #             $ref: '#/components/schemas/ResetRequest'
+  #     responses:
+  #       '204':
+  #         description: Письмо на почту отправлено
+  #       '400':
+  #         $ref: '#/components/responses/400BadRequest'
+  #   patch:
+  #     summary: Сброс пароля с помощью ссылки
+  #     description: Сброс пароля и восстановление доступа к аккаунту
+  #     tags:
+  #       - Auth  
+  #     requestBody:
+  #       required: true 
+  #       content:
+  #         application/json:
+  #           schema:
+  #             $ref: '#/components/schemas/ResetForm' 
+  #     responses:
+  #       '204':
+  #         description: Аккаунт восстановлен
+  #       '400':
+  #         $ref: '#/components/responses/400BadRequest'
+  #       '422':
+  #         description: Пароль не отличается от прошлого
 
 
   /auth/refresh:
@@ -143,74 +143,74 @@ paths:
         '401':
           $ref: '#/components/responses/401Unauthorized'
 
-  /auth/logout:
-    post:
-      summary: Выход из системы
-      tags:
-        - Auth
-      security:
-        - BearerAuth: [ ]
-      responses:
-        '200':
-          description: Сеанс завершен
+  # /auth/logout:
+  #   post:
+  #     summary: Выход из системы
+  #     tags:
+  #       - Auth
+  #     security:
+  #       - BearerAuth: [ ]
+  #     responses:
+  #       '200':
+  #         description: Сеанс завершен
   
-  /auth/email:
-    post:
-      summary: Запрос на смену email
-      description: Запрос на смену email и отправка письма на почту
-      tags:
-        - Auth
-      requestBody:
-        required: true 
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/EmailChange'
-      responses:
-        '204':
-          description: Письмо на почту отправлено
-        '400':
-          $ref: '#/components/responses/400BadRequest'
-        '401':
-          description: Неверный пароль
-    patch:
-      summary: Подтверждение смены email
-      description: Подтверждение смены email с помощью ссылки
-      tags:
-        - Auth  
-      requestBody:
-        required: true 
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/EmailChangeToken' 
-      responses:
-        '204':
-          description: Почта изменена
-        '400':
-          $ref: '#/components/responses/400BadRequest'
-        '422':
-          description: Почта не отличается от прошлого
+  # /auth/email:
+  #   post:
+  #     summary: Запрос на смену email
+  #     description: Запрос на смену email и отправка письма на почту
+  #     tags:
+  #       - Auth
+  #     requestBody:
+  #       required: true 
+  #       content:
+  #         application/json:
+  #           schema:
+  #             $ref: '#/components/schemas/EmailChange'
+  #     responses:
+  #       '204':
+  #         description: Письмо на почту отправлено
+  #       '400':
+  #         $ref: '#/components/responses/400BadRequest'
+  #       '401':
+  #         description: Неверный пароль
+  #   patch:
+  #     summary: Подтверждение смены email
+  #     description: Подтверждение смены email с помощью ссылки
+  #     tags:
+  #       - Auth  
+  #     requestBody:
+  #       required: true 
+  #       content:
+  #         application/json:
+  #           schema:
+  #             $ref: '#/components/schemas/EmailChangeToken' 
+  #     responses:
+  #       '204':
+  #         description: Почта изменена
+  #       '400':
+  #         $ref: '#/components/responses/400BadRequest'
+  #       '422':
+  #         description: Почта не отличается от прошлого
 
-  /auth/password:
-    patch:
-      summary: Смена пароля
-      description: Смена пароля авторизованного пользователя
-      tags:
-        - Auth 
-      requestBody:
-        required: true 
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/PasswordChange'
-      responses:
-        '204':
-          description: Пароль изменён
-        '401':
-          description: Неверный текущий пароль
-        '422':
-          description: Пароль не отличается от прошлого
+  # /auth/password:
+  #   patch:
+  #     summary: Смена пароля
+  #     description: Смена пароля авторизованного пользователя
+  #     tags:
+  #       - Auth 
+  #     requestBody:
+  #       required: true 
+  #       content:
+  #         application/json:
+  #           schema:
+  #             $ref: '#/components/schemas/PasswordChange'
+  #     responses:
+  #       '204':
+  #         description: Пароль изменён
+  #       '401':
+  #         description: Неверный текущий пароль
+  #       '422':
+  #         description: Пароль не отличается от прошлого
 
 
   # ==========================================
@@ -722,40 +722,40 @@ components:
           type: boolean
           example: true
 
-    RegisterRequest:
-      type: object
-      required:
-        - email
-        - password
-        - role
-      properties:
-        email:
-          type: string
-          format: email
-          example: "candidate@example.com"
-        password:
-          type: string
-          format: password
-          minLength: 8
-          example: "SecretPassword123!"
-        role:
-          type: string
-          enum: [ candidate, employer ]
-          example: "candidate"
+    # RegisterRequest:
+    #   type: object
+    #   required:
+    #     - email
+    #     - password
+    #     - role
+    #   properties:
+    #     email:
+    #       type: string
+    #       format: email
+    #       example: "candidate@example.com"
+    #     password:
+    #       type: string
+    #       format: password
+    #       minLength: 8
+    #       example: "SecretPassword123!"
+    #     role:
+    #       type: string
+    #       enum: [ candidate, employer ]
+    #       example: "candidate"
 
-    LoginRequest:
-      type: object
-      required:
-        - email
-        - password
-      properties:
-        email:
-          type: string
-          format: email
-          example: "candidate@example.com"
-        password:
-          type: string
-          example: "SecretPassword123!"
+    # LoginRequest:
+    #   type: object
+    #   required:
+    #     - email
+    #     - password
+    #   properties:
+    #     email:
+    #       type: string
+    #       format: email
+    #       example: "candidate@example.com"
+    #     password:
+    #       type: string
+    #       example: "SecretPassword123!"
 
     AuthTokens:
       type: object
@@ -770,81 +770,81 @@ components:
           type: string
           example: "d9b20e0d-0348-43e8-8a89-290d2380582d"
 
-    AuthResponse:
-      type: object
-      required:
-        - user
-        - tokens
-      properties:
-        user:
-          $ref: '#/components/schemas/User'
-        tokens:
-          $ref: '#/components/schemas/AuthTokens'
+    # AuthResponse:
+    #   type: object
+    #   required:
+    #     - user
+    #     - tokens
+    #   properties:
+    #     user:
+    #       $ref: '#/components/schemas/User'
+    #     tokens:
+    #       $ref: '#/components/schemas/AuthTokens'
 
-    ResetRequest:
-      type: object
-      required:
-        - email 
-      properties:
-        email:
-          type: string
-          format: email
-          example: "candidate@example.com"
+    # ResetRequest:
+    #   type: object
+    #   required:
+    #     - email 
+    #   properties:
+    #     email:
+    #       type: string
+    #       format: email
+    #       example: "candidate@example.com"
 
-    ResetForm:
-      type: object
-      required:
-        - email 
-      properties:
-        resetToken:
-          type: string
-          example: "fds9-8gfdg432-vxfdshu6-i9eu"
-        password:
-          type: string
-          format: password
-          minLength: 8
-          example: "SecretPassword123!"
+    # ResetForm:
+    #   type: object
+    #   required:
+    #     - email 
+    #   properties:
+    #     resetToken:
+    #       type: string
+    #       example: "fds9-8gfdg432-vxfdshu6-i9eu"
+    #     password:
+    #       type: string
+    #       format: password
+    #       minLength: 8
+    #       example: "SecretPassword123!"
 
-    EmailChange:
-      type: object
-      required:
-        - newEmail
-        - password 
-      properties:
-        newEmail:
-          type: string
-          format: email
-          example: "candidate@example.com"
-        password:
-          type: string
-          format: email
-          example: "candidate@example.com"
+    # EmailChange:
+    #   type: object
+    #   required:
+    #     - newEmail
+    #     - password 
+    #   properties:
+    #     newEmail:
+    #       type: string
+    #       format: email
+    #       example: "candidate@example.com"
+    #     password:
+    #       type: string
+    #       format: email
+    #       example: "candidate@example.com"
 
-    EmailChangeToken:
-      type: object
-      required:
-        - email 
-      properties:
-        emailChangeToken:
-          type: string
-          example: "jfd9@hfdfsi@dvnc"
+    # EmailChangeToken:
+    #   type: object
+    #   required:
+    #     - email 
+    #   properties:
+    #     emailChangeToken:
+    #       type: string
+    #       example: "jfd9@hfdfsi@dvnc"
     
-    PasswordChange:
-      type: object
-      required:
-        - newEmail
-        - password 
-      properties:
-        oldPassword:
-          type: string
-          format: password
-          minLength: 8
-          example: "SecretPassword123!"
-        newPassword:
-          type: string
-          format: password
-          minLength: 8
-          example: "SecretPassword123!"
+    # PasswordChange:
+    #   type: object
+    #   required:
+    #     - newEmail
+    #     - password 
+    #   properties:
+    #     oldPassword:
+    #       type: string
+    #       format: password
+    #       minLength: 8
+    #       example: "SecretPassword123!"
+    #     newPassword:
+    #       type: string
+    #       format: password
+    #       minLength: 8
+    #       example: "SecretPassword123!"
 
     CandidateProfile:
       type: object
