# backend/handlers/auth/mux.go
@@ -2,14 +2,13 @@ package auth
 
 import "net/http"
 
-func NewMux() *http.ServeMux {
-	mux := http.NewServeMux()
-
-	mux.HandleFunc("/register", nullHandler)
-	mux.HandleFunc("/login", nullHandler)
-	mux.HandleFunc("/refresh", nullHandler)
-	mux.HandleFunc("/me", nullHandler)
-	mux.HandleFunc("/logout", nullHandler)
-
-	return mux
+func RegisterRoutes(
+	mux *http.ServeMux,
+	requireAuth func(http.Handler) http.Handler,
+) {
+	mux.HandleFunc("POST /api/v1/auth/refresh", nullHandler)
+	mux.Handle(
+		"GET /api/v1/auth/me",
+		requireAuth(http.HandlerFunc(authMeHandler)),
+	)
 }
